# Pitot

./: .clang-tidy  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION_INDEX.md  LICENSE  README.md  convert_geodesy_to_submodule.sh  coverage_analysis.md  setup_geodesy_submodule.sh
.github/workflows/: auto-release.yml  ci.yml  quality-gates.yml  release-package.yml  release.yml  test-submodules.yml
.kiro/specs/dstl-documentation/: design.md  requirements.md  tasks.md
DGSTFEM/: CMakeLists.txt
DGSTFEM/Tests/: DG0.cpp
DGSTFEM/include/: DG0  DG0.h
Geodesy/: .gitignore  100_PERCENT_COVERAGE.md  ALL_TESTS_PASSING.md  CMakeLists.txt  CONVERT_TO_STANDALONE.md  ENHANCEMENTS.md  FINAL_POLISH.md  FINAL_TEST_SUMMARY.md  FLAT_EARTH_DYNAMICS.md  IMPROVEMENTS.md  LICENSE  PHASE1_COMPLETE.md  PHASE1_SUCCESS.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_STANDALONE.md  RELEASE_NOTES.md  STANDALONE_READY.md  SUMMARY.md  TESTING_STATUS.md  TEST_PLAN.md  altitude_methods_comparison.cpp  comprehensive_example.cpp  example.cpp  flight_dynamics_example.cpp  rk4_geodesic_test.cpp  spherical_iteration_test.cpp  verification_test.cpp
Geodesy/Tests/: CMakeLists.txt  test_debug_failures.cpp  test_geodesy.cpp  test_geodesy_100percent.cpp  test_geodesy_complete.cpp  test_geodesy_reference.cpp  test_geodesy_rk4.cpp  test_geodesy_vincenty.cpp  test_print_distances.cpp  test_reference_data.h  verify_distances.cpp
Geodesy/include/dstl/: Geodesy.h
LinAlg/: CMakeLists.txt
LinAlg/Tests/: LinAlgTests.cpp  MatTests.cpp  VecTests.cpp
LinAlg/include/dstl/: mat.h  vec.h  zzvec.h
LinAlg/src/: LinAlg.cpp
Pitot/: .gitignore  CMakeLists.txt
Pitot/.github/workflows/: fast-check.yml
Pitot/include/dstl/: Pitot.h
Quad/: QuadTests1.cpp  quad.h  quad_all.h
cmake/: DSTLConfig.cmake.in  DSTLDependencies.cmake  DSTLTesting.cmake
docs/: AUTOMATED_RELEASES.md  RELEASE_AUTOMATION_SETUP.md  RELEASE_PACKAGES.md  RELEASE_QUICK_REFERENCE.md
examples/: CPM-Example.cmake  FetchContent-Release.cmake
include/dstl/: BitFlag.h  DataPools.h  Filer.h  Lab.h  LinAlg.h  Logger.h  Mutex.h  Numbers.h  Pitot.h  Quadrature.h  README.md  Ratio.h  Result.h  StringUtils.h  dlog.h  dmutex.h  dpools.h  dprint.h  dstl.h  dstl.hpp  dtests.h  zzNumber.h
scripts/: create_release_package.sh  new_component.sh  publish_component.sh  quick_release.sh  test_release_package.sh
scripts/templates/component_base/: .clang-format  CMakeLists.txt
scripts/templates/component_base/.github/workflows/: ci.yml  quality-gates.yml  release.yml
scripts/templates/component_base/include/dstl/: __COMPONENT_NAME__.h
tests/package/: CMakeLists.txt  main.cpp
