cmake_minimum_required(VERSION 3.12)
project(__COMPONENT_NAME__ LANGUAGES CXX)

include(GNUInstallDirs)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(dstl___COMPONENT_NAME_LOWER__ INTERFACE)
add_library(dstl::__COMPONENT_NAME_LOWER__ ALIAS dstl___COMPONENT_NAME_LOWER__)

target_include_directories(dstl___COMPONENT_NAME_LOWER__
  INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_compile_features(dstl___COMPONENT_NAME_LOWER__ INTERFACE cxx_std_14)

set_target_properties(dstl___COMPONENT_NAME_LOWER__ PROPERTIES EXPORT_NAME __COMPONENT_NAME_LOWER__)

install(TARGETS dstl___COMPONENT_NAME_LOWER__
  EXPORT DSTLTargets
)

install(DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
)
